Fixed GridField button alignment (regression from a9cbea34)
The text-indent: 9999px was relying on text-align: right to function. Because it was left-aligned, text showed below the icon graphic.
The width of the button column was constrainted to 40px,
which first of all didn't fit the two icons properly,
but also made the big assumption that we never have more than two.
The new width: auto setting means that the column might be a bit
longer than desired, but at least it doesn't cut off icons
or wrap them into multiple lines unnecessarily.

Thanks to ARNHOE for starting this patch.

--- a/scss/GridField.scss
+++ b/scss/GridField.scss
@@ -164,9 +164,10 @@ $gf_grid_x:	16px;
 				// The last column (buttons) should always shrink to fit.
 				// Overwritten for IE7, which doesn't support this.			
 				&.col-buttons {
-					width: 40px;
+					width: auto;
 					padding:0 $gf_grid_x/2;
-					text-align: left;
+					text-align: right;
+					white-space: nowrap;
 				}
 				&.col-listChildrenLink {
 					width:$gf_grid_x;
@@ -254,7 +255,8 @@ $gf_grid_x:	16px;
 					display:inline-block;
 					width:20px;
 					height:20px; //min height to fit the edit icon
-					text-indent:9999em;
+					text-align: left;
+					text-indent:-9999em;
 					overflow: hidden;
 					vertical-align: middle;
 				}
